@@ -31,6 +31,7 @@ Cobbler CHANGELOG
 - optional MAC registration is now built-in to requesting kickstarts
 - legacy static file generation from /var/www/cobbler removed
 - implement "cobbler ___ dumpvars --name=X" feature to show template vars
+- validateks now works against all URLs as opposed to rendered local files
 
 - ??? - 0.8.3
 - Make createrepo get run for local cobbler reposync invocations as needed
